--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
   "name": "verdaccio-github-token",
-  "version": "1.0.0",
-  "description": "Verdaccio authentication plugin over github personal access tokens",
+  "version": "2.0.0",
+  "description": "Unhaggle - Verdaccio authentication plugin - uses github personal access tokens",
   "main": "index.js",
   "scripts": {
     "test": "xo index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/reklatsmasters/verdaccio-github-token.git"
+    "url": "git@github.com:unhaggle/verdaccio-github-token.git"
   },
-  "author": "Dmitriy Tsvettsikh <me@reklatsmasters.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/reklatsmasters/verdaccio-github-token/issues"
-  },
-  "homepage": "https://github.com/reklatsmasters/verdaccio-github-token#readme",
+  "author": "Motoinsight",
+  "homepage": "https://github.com/unhaggle/verdaccio-github-token#readme",
   "engines": {
     "node": ">=8"
   },
   "dependencies": {
     "got": "^8.3.1",
-    "lru-cache": "^4.1.3"
+    "lru-cache": "^4.1.3",
+    "ms": "^2.1.3"
   },
   "devDependencies": {
     "xo": "^0.21.1"
